[gd_scene load_steps=27 format=3 uid="uid://ctr78uqgnngos"]

[ext_resource type="Texture2D" uid="uid://dinniq4jdk8le" path="res://assets/garden_double_shelf.png" id="1_8gbba"]
[ext_resource type="Script" uid="uid://uyjxgl41m335" path="res://scenes/main.gd" id="1_ee4r6"]
[ext_resource type="Script" uid="uid://88ysp7capcmn" path="res://scripts/lab.gd" id="2_bo1nx"]
[ext_resource type="Script" uid="uid://d0o2fixek8d03" path="res://scripts/garden.gd" id="2_ynf5e"]
[ext_resource type="PackedScene" uid="uid://bd8gfklgd78xg" path="res://scenes/Jar_slot.tscn" id="3_hptm8"]
[ext_resource type="Texture2D" uid="uid://bny66qf2eo775" path="res://assets/background_framed.png" id="3_kry3j"]
[ext_resource type="Texture2D" uid="uid://dtwtqtmd6y2ak" path="res://assets/jars/tier1.png" id="4_hptm8"]
[ext_resource type="Texture2D" uid="uid://drnxwjo7hd82j" path="res://assets/brewing.png" id="5_6bp64"]
[ext_resource type="PackedScene" uid="uid://cyktua4fqunq0" path="res://workbench/item_slot.tscn" id="5_21xkr"]
[ext_resource type="PackedScene" uid="uid://bqyw0eywwhni8" path="res://inventory/inventory_gui.tscn" id="7_6bp64"]
[ext_resource type="Script" uid="uid://cnevwedyaulx1" path="res://scripts/pot_shop.gd" id="8_fdnlq"]
[ext_resource type="Texture2D" uid="uid://dwnq3i8spx4bf" path="res://assets/jars/tier2.png" id="10_jkdf5"]
[ext_resource type="Texture2D" uid="uid://ed4sc5to8m8h" path="res://assets/jars/tier3.png" id="11_wsu2k"]
[ext_resource type="Texture2D" uid="uid://cxa7h4dy8jl8w" path="res://assets/jars/tier4.png" id="12_k12tt"]
[ext_resource type="PackedScene" uid="uid://di1ry0hal8m3v" path="res://scenes/notification_popup.tscn" id="14_3pmx8"]
[ext_resource type="Script" uid="uid://bwj16xdptxltw" path="res://scripts/tutorial.gd" id="14_ee4r6"]
[ext_resource type="AudioStream" uid="uid://d0mahrij0kw5m" path="res://assets/sounds/plant.wav" id="14_h1bgf"]
[ext_resource type="AudioStream" uid="uid://etsd3nuo41by" path="res://assets/sounds/ambient.mp3" id="14_pdsj5"]
[ext_resource type="AudioStream" uid="uid://dni3nh3vdi53d" path="res://assets/sounds/grotte.wav" id="15_b3802"]
[ext_resource type="PackedScene" uid="uid://krayu7qgdgt0" path="res://components/popup/popup.tscn" id="16_3pmx8"]
[ext_resource type="AudioStream" uid="uid://c3p84p2s62k74" path="res://assets/sounds/cristaux.wav" id="16_fevyy"]
[ext_resource type="AudioStream" uid="uid://byabovbq2y15k" path="res://assets/sounds/tier4.wav" id="17_hibaj"]
[ext_resource type="AudioStream" uid="uid://bekx5ndawwmeo" path="res://assets/sounds/craft.wav" id="18_hibaj"]
[ext_resource type="AudioStream" uid="uid://ddwnca1qajwda" path="res://assets/sounds/brew.wav" id="19_pdsj5"]
[ext_resource type="AudioStream" uid="uid://dp3ra44dfy1ho" path="res://assets/sounds/combine.wav" id="20_ee4r6"]

[sub_resource type="Theme" id="Theme_jjgbg"]
MarginContainer/constants/margin_bottom = 20
MarginContainer/constants/margin_left = 20
MarginContainer/constants/margin_right = 20
MarginContainer/constants/margin_top = 20

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ee4r6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_8gbba")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jjgbg")

[node name="Garden" type="GridContainer" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
columns = 5
script = ExtResource("2_ynf5e")

[node name="JarSlot" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JarSlot2" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JarSlot3" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JarSlot4" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JarSlot5" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JarSlot6" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JarSlot7" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JarSlot8" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JarSlot9" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JarSlot10" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" instance=ExtResource("3_hptm8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Workbench" type="Panel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WorkbenchTabs" type="TabContainer" parent="HBoxContainer/VBoxContainer/Workbench"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Lab" type="NinePatchRect" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs"]
layout_mode = 2
texture = ExtResource("3_kry3j")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
script = ExtResource("2_bo1nx")
metadata/_tab_index = 0

[node name="NotificationPopUp" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Lab" instance=ExtResource("14_3pmx8")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1152.0
offset_top = -380.0
offset_right = 1152.0
offset_bottom = 268.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Lab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CombineButton" type="Button" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Lab/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 40
text = "Combine"

[node name="Brewing" type="TextureRect" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Lab"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_6bp64")
expand_mode = 3
stretch_mode = 5

[node name="InputSlot1" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Lab/Brewing" instance=ExtResource("5_21xkr")]
layout_mode = 1
anchor_left = 0.0654846
anchor_top = 0.536
anchor_right = 0.174485
anchor_bottom = 0.777
offset_left = -0.112003
offset_top = 0.0240021
offset_right = -0.308014
offset_bottom = -0.10701
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="InputSlot2" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Lab/Brewing" instance=ExtResource("5_21xkr")]
layout_mode = 1
anchor_left = 0.26134
anchor_top = 0.117127
anchor_right = 0.369682
anchor_bottom = 0.357563
offset_left = -0.100006
offset_top = -0.0840034
offset_right = 0.127991
offset_bottom = -0.0510101
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="InputSlot3" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Lab/Brewing" instance=ExtResource("5_21xkr")]
layout_mode = 1
anchor_left = 0.481
anchor_top = 0.433
anchor_right = 0.59
anchor_bottom = 0.674
offset_left = 0.235962
offset_top = -0.00300598
offset_right = 0.039978
offset_bottom = -0.134003
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="OutputSlot" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Lab/Brewing" instance=ExtResource("5_21xkr")]
layout_mode = 1
anchor_left = 0.81277
anchor_top = 0.666564
anchor_right = 0.92177
anchor_bottom = 0.907564
offset_left = -0.0320435
offset_top = 0.030014
offset_right = -0.228027
offset_bottom = -0.101013
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Pot Workshop" type="NinePatchRect" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs"]
visible = false
layout_mode = 2
texture = ExtResource("3_kry3j")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("8_fdnlq")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Type1" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer/Type1"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("4_hptm8")
ignore_texture_size = true
stretch_mode = 5

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer/Type1"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
tooltip_text = "Clay, Fire, Earth"
text = "Craft"

[node name="Type2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer/Type2"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("10_jkdf5")
ignore_texture_size = true
stretch_mode = 5

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer/Type2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
tooltip_text = "Rock, Glass, Coal"
text = "Craft"

[node name="Type3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer/Type3"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("11_wsu2k")
ignore_texture_size = true
stretch_mode = 5

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer/Type3"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
tooltip_text = "Obsidian, Diamond, Quartz"
text = "Craft"

[node name="Type4" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer/Type4"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("12_k12tt")
ignore_texture_size = true
stretch_mode = 5

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop/MarginContainer/HBoxContainer/Type4"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
tooltip_text = "Singularity, Dark Matter, Time"
text = "Craft"

[node name="InventoryGUI" parent="HBoxContainer" instance=ExtResource("7_6bp64")]
layout_mode = 2
size_flags_stretch_ratio = 0.4

[node name="Tutorial" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_ee4r6")

[node name="Tuto1" parent="Tutorial" instance=ExtResource("16_3pmx8")]
layout_mode = 1
text = "Elementalchemy starts with the 4 basic atoms of our reality : Earth, Water, Fire and Air (as you learnt in science class of course)."

[node name="Tuto2" parent="Tutorial" instance=ExtResource("16_3pmx8")]
layout_mode = 1
panel_horizontal = 0
panel_vertical = 0
text = "These growth jars on these shelves allow you to generate atoms. Click on a jar when it glows to collect the Atoms!
You will soon be able to craft more Tier 1 flower pots. More advanced atoms will require better generators.
Right click on a generator to remove it (and its atom)."

[node name="Tuto3" parent="Tutorial" instance=ExtResource("16_3pmx8")]
layout_mode = 1
panel_horizontal = 8
panel_vertical = 8
text = "The atoms you collect are stored here. They can be used to generate more of the same atom by growing them in the appropriate generator."

[node name="Tuto4" parent="Tutorial" instance=ExtResource("16_3pmx8")]
layout_mode = 1
panel_horizontal = 0
panel_vertical = 8
text = "The Synthesizer is the heart of the lab! It can synthesize a new atom by combining 3 atoms. 
Find out which combinations work !
In the Pot Crafting tab, you can also craft new pots with the required atoms."

[node name="Tuto5" parent="Tutorial" instance=ExtResource("16_3pmx8")]
layout_mode = 1
text = "You’re set! Try to produce all the resources you need to survive on your own on this empty Moon. Maybe you should try to get some Wood using Earth, Water and Air (“Getting Wood” was the first achievement in the NASA survival simulator…)"

[node name="ambiant" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_pdsj5")
volume_db = -35.0
autoplay = true
parameters/looping = true

[node name="plant" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_h1bgf")

[node name="cave" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_b3802")

[node name="crystal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_fevyy")
volume_db = -20.0

[node name="endgame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_hibaj")
volume_db = -20.0

[node name="craft" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_hibaj")
volume_db = -10.0

[node name="brew" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_pdsj5")
volume_db = -3.0

[node name="combine" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_ee4r6")
volume_db = -5.0

[connection signal="play_cave" from="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" to="cave" method="play"]
[connection signal="play_crystal" from="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" to="crystal" method="play"]
[connection signal="play_endgame" from="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" to="endgame" method="play"]
[connection signal="play_plant" from="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" to="plant" method="play"]
[connection signal="putItemBack" from="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer/Garden" to="HBoxContainer/InventoryGUI" method="putItemBack"]
[connection signal="buying" from="HBoxContainer/VBoxContainer/Workbench/WorkbenchTabs/Pot Workshop" to="craft" method="play"]
